--- a/yaml/core/base.css
+++ b/yaml/core/base.css
@@ -327,7 +327,7 @@
   .ym-form textarea {
     display: block;
     position: relative;
-    width: 56%;
+    width: 65%;
     padding-left: 1%;
     padding-right: 1%;
   }
@@ -347,7 +347,7 @@
   }
   .ym-form .ym-fbox-grid {
     overflow: hidden;
-    width: 60%;
+    width: 70%;
   }
   .ym-form .ym-fbox-grid .ym-type-text input,
   .ym-form .ym-fbox-grid .ym-type-text textarea,
@@ -433,7 +433,6 @@
   .ym-columnar .ym-type-text input,
   .ym-columnar .ym-type-text textarea {
     float: left;
-    width: 65%;
     margin-right: -3px;
   }
   .ym-columnar .ym-type-check {
@@ -448,7 +447,6 @@
   }
   .ym-columnar .ym-fbox-grid {
     margin-left: 30%;
-    width: 70%;
     margin-right: -3px;
   }
   .ym-columnar .ym-fbox-grid .ym-type-text label,
@@ -463,6 +461,13 @@
   .ym-columnar .ym-fbox-grid .ym-type-check input {
     margin-left: 0;
   }
+  .ym-columnar .ym-fbox-wrap {
+    margin-left: 30%;
+  }
+  .ym-columnar .ym-fbox-wrap label,
+  .ym-columnar .ym-fbox-wrap input {
+    margin-left: 0;
+  }
 
   .ym-fbox-grid + .ym-fbox-grid {
     margin-top: 0.5em;
@@ -474,15 +479,11 @@
   }
 
   .ym-type-select select {
-    width: 58%;
+    width: 67%;
   }
 
   .ym-full .ym-type-select select {
     width: 96%;
-  }
-
-  .ym-columnar .ym-type-select select {
-    width: 67%;
   }
 
    /**
